cs# Enter a description of the change. speculative fix for bug 783312

Bug: 783312
Change-Id: I14996782de9fc469d3e31e7f1ba46ec353922710