content/gpu/gpu_sandbox_hook_linux.cc
@@ -199,7 +199,7 @@ std::vector<BrokerFilePermission> FilePermissionsForGpu(
   if (IsChromeOS()) {
     if (IsArchitectureArm())
       AddArmGpuWhitelist(&permissions);
-    if (options.use_amd_specific_policies)
+    else if (options.use_amd_specific_policies)
       AddAmdGpuWhitelist(&permissions);
     if (UseV4L2Codec())
       AddV4L2GpuWhitelist(&permissions, options);
@@ -273,7 +273,7 @@ bool LoadLibrariesForGpu(
   if (IsChromeOS()) {
     if (IsArchitectureArm())
       LoadArmGpuLibraries();
-    if (options.use_amd_specific_policies && !LoadAmdGpuLibraries())
+    else if (options.use_amd_specific_policies && !LoadAmdGpuLibraries())
       return false;
     if (UseV4L2Codec())
       LoadV4L2Libraries();
